force-app/main/default/objects/GRMS_UserClientRelation__c/GRMS_UserClientRelation__c.object-meta.xml
<CustomObject>
    <label>User and Client Relationship</label>
    <nameField>
        <displayFormat>UCR-{00000000}</displayFormat>
        <label>Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User and Client Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>