force-app/main/default/objects/GRMS_UserClientRelation__c/fields/GRMS_Client__c.field-meta.xml
<CustomField>
    <fullName>GRMS_Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.GRMS_ContactType__c</field>
            <operation>equals</operation>
            <value>Survey Client</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Survey Users</relationshipLabel>
    <relationshipName>ClientRelations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>