force-app/main/default/objects/GRMS_UserClientRelation__c/validationRules/GRMS_Client_Record_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>GRMS_Client_Record_Type</fullName>
    <active>true</active>
    <description>Restrict contact record type for client field.</description>
    <errorConditionFormula>TEXT(GRMS_Client__r.GRMS_ContactType__c) &lt;&gt; &quot;Survey_Client&quot;</errorConditionFormula>
    <errorDisplayField>GRMS_Client__c</errorDisplayField>
    <errorMessage>You must specify &quot;Survey Client&quot; type contact for the client field.</errorMessage>
</ValidationRule>