force-app/main/default/objects/GRMS_UserClientRelation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GRMS_User__c</columns>
    <columns>GRMS_Client__c</columns>
    <columns>GRMS_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>